//
//  eCurrencyCode.swift
//  MyCurrencyConverterApp
//
//  Created by Rigoberto Sáenz Imbacuán on 8/6/16.
//  Copyright © 2016 Rigoberto Sáenz Imbacuán [https://www.linkedin.com/in/rsaenzi]. All rights reserved.
//

import UIKit

enum eCurrencyCode: String {
    
    case AustralianDollar       = "AUD"
    case BulgarianLev           = "BGN"
    case BrazilianReal          = "BRL"
    case CanadianDollar         = "CAD"
    case SwissFranc             = "CHF"
    case ChineseYuanRenminbi    = "CNY"
    case CzechKoruna            = "CZK"
    case DanishKrone            = "DKK"
    case BritishPound           = "GBP"
    case HongKongDollar         = "HKD"
    case CroatianKuna           = "HRK"
    case HungarianForint        = "HUF"
    case IndonesianRupiah       = "IDR"
    case IsraeliShekel          = "ILS"
    case IndianRupee            = "INR"
    case JapaneseYen            = "JPY"
    case SouthKoreanWon         = "KRW"
    case MexicanPeso            = "MXN"
    case MalaysianRinggit       = "MYR"
    case NorwegianKrone         = "NOK"
    case NewZealandDollar       = "NZD"
    case PhilippinePeso         = "PHP"
    case PolishZloty            = "PLN"
    case RomanianNewLeu         = "RON"
    case BelarusianRuble        = "RUB"
    case SwedishKrona           = "SEK"
    case SingaporeDollar        = "SGD"
    case ThaiBaht               = "THB"
    case TurkishLira            = "TRY"
    case SouthAfricanRand       = "ZAR"
    case Euro                   = "EUR"
}