...
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="10" background="CellMask" translatesAutoresizingMaskIntoConstraints="NO" id="XWN-Pi-atW" userLabel="Input">
                                                <rect key="frame" x="75" y="0.0" width="170" height="50"/>
                                                <color key="tintColor" red="0.93725490199999995" green="0.01176470588" blue="0.53725490200000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="TextfieldDollars"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="170" id="VJU-Py-iUj"/>
                                                </constraints>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <fontDescription key="fontDescription" name="HUGE-AvantGarde-Bold" family="HUGE Avant Garde" pointSize="30"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" keyboardAppearance="alert" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
...
                                            </textField>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5V-gb-hSk" userLabel="Button">
                                                <rect key="frame" x="255" y="0.0" width="50" height="50"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8AB-QZ-DR4">
                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="ButtonConvert"/>
                                                        <state key="normal" image="ButtonConvert"/>
                                                        <connections>
                                                            <action selector="onTapConvert:forEvent:" destination="BYZ-38-t0r" eventType="touchUpInside" id="T4A-yL-sH7"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
...
